# Spedv1

./: .gitignore  ACTIVITY.md  Makefile  README.md  doc.yaml  pyproject.toml
entradas/: efd_contrib.txt  nfse.xml
src/sped_extractor/: __init__.py  config.py  consolidator.py  main.py  quality.py  utils.py
src/sped_extractor/parsers/: __init__.py  base.py  efd_contrib.py  efd_icms_ipi.py  nfe_xml.py  nfse_xml.py
tests/: test_sped_extractor.py
tests/samples/: efd_icms_ipi.txt  nfe_difal.xml  nfe_saida_icms00.xml
