[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sped-extractor"
version = "1.0.0"
description = "Ferramenta para extrair itens fiscais de arquivos SPED e NF-e/NFS-e."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
addopts = "-q"

